fix: ui of the app and device firmware update
